--- a/libtextstyle/lib/Makefile.am
+++ b/libtextstyle/lib/Makefile.am
@@ -237,7 +237,7 @@ config.h: $(BUILT_SOURCES) libtextstyle.sym
 	      done; \
 	    } 5>&1 1>&2 \
 	      | sed -e 's,.* ,,' | grep -v '@' | LC_ALL=C sort | LC_ALL=C uniq \
-	      | $(top_srcdir)/build-aux/join-v-1 - libtextstyle.sym \
+	      | LC_ALL=C $(top_srcdir)/build-aux/join-v-1 - libtextstyle.sym \
 	      | sed -e 's,^\(.*\)$$,#define \1 libtextstyle_\1,' > config.h-t; \
 	  } 6>&1 && \
 	  if test -f config.h; then \
