build: Restore installation of preloadable_libintl.so (regression 2021-06-15).
* gettext-tools/configure.ac (USE_INCLUDED_LIBINTL, BUILD_INCLUDED_LIBINTL,
PRELOADABLE_LIBINTL): Remove unused conditionals.
* gettext-runtime/configure.ac (PRELOADABLE_LIBINTL): Define as before in
gettext-tools/configure.ac.
* PACKAGING: Update regarding preloadable_libintl.so.

--- a/gettext-runtime/configure.ac
+++ b/gettext-runtime/configure.ac
@@ -101,7 +101,8 @@ AM_GNU_GETTEXT([use-libtool], [need-ngettext])
 dnl Conditionals for the intl/ directory.
 AM_CONDITIONAL([USE_INCLUDED_LIBINTL], [test $USE_INCLUDED_LIBINTL = yes])
 AM_CONDITIONAL([BUILD_INCLUDED_LIBINTL], [test $BUILD_INCLUDED_LIBINTL = yes])
-AM_CONDITIONAL([PRELOADABLE_LIBINTL], [false])
+AM_CONDITIONAL([PRELOADABLE_LIBINTL],
+  [test $USE_INCLUDED_LIBINTL = no && test $GLIBC2 = yes && test "$enable_shared" = yes])
 
 dnl Checks for header files, functions and declarations.
 gl_INIT
