build: Add a separate configure.ac in gettext-runtime/intl/.
* autogen.sh (GNULIB_MODULES_RUNTIME_OTHER): Remove bison. Instead, copy
bison.m4 explicitly.
Generate configure file also in gettext-runtime/intl/.
Do automake invocations top-down, not bottom-up.
* gettext-runtime/intl/Makefile.am (ACLOCAL_AMFLAGS, SUBDIRS): New variables.
* gettext-runtime/m4/gettext.m4 (AM_GNU_GETTEXT): Allow 'here' as INTLSYMBOL
argument.
* gettext-runtime/intl/configure.ac: New file, based on
gettext-runtime/configure.ac.
* gettext-runtime/intl/AUTHORS: New file.
* gettext-runtime/intl/NEWS: New file.
* gettext-runtime/intl/README: New file.
* gettext-runtime/intl/ABOUT-NLS: New file, copied from
gettext-runtime/ABOUT-NLS.
* gettext-runtime/intl/INSTALL: New file, copied from gettext-runtime/INSTALL.
* gettext-runtime/configure.ac: Define WINDRES. Pass third argument to
AM_GNU_GETTEXT. Remove conditionals USE_INCLUDED_LIBINTL,
BUILD_INCLUDED_LIBINTL, PRELOADABLE_LIBINTL. Invoke AC_CONFIG_SUBDIRS([intl]).
Don't create intl/Makefile from here.
* gettext-tools/configure.ac: Define WINDRES. Redefine __libc_lock_*, for use
in localealias.c. Invoke gt_GLIBC2.

--- a/.gitignore
+++ b/.gitignore
@@ -343,6 +343,9 @@
 /gettext-runtime/config.h.in
 /gettext-runtime/Makefile.in
 /gettext-runtime/doc/Makefile.in
+/gettext-runtime/intl/aclocal.m4
+/gettext-runtime/intl/configure
+/gettext-runtime/intl/config.h.in
 /gettext-runtime/intl/Makefile.in
 /gettext-runtime/intl-csharp/Makefile.in
 /gettext-runtime/intl-java/Makefile.in
@@ -508,6 +511,8 @@ autom4te.cache/
 /config.status
 /gettext-runtime/config.log
 /gettext-runtime/config.status
+/gettext-runtime/intl/config.log
+/gettext-runtime/intl/config.status
 /gettext-runtime/libasprintf/config.log
 /gettext-runtime/libasprintf/config.status
 /gettext-tools/config.log
@@ -524,6 +529,9 @@ autom4te.cache/
 /gettext-runtime/stamp-h1
 /gettext-runtime/doc/Makefile
 /gettext-runtime/intl/Makefile
+/gettext-runtime/intl/config.h
+/gettext-runtime/intl/libtool
+/gettext-runtime/intl/stamp-h1
 /gettext-runtime/intl-csharp/Makefile
 /gettext-runtime/intl-java/Makefile
 /gettext-runtime/libasprintf/Makefile
