build: Simplify the use of gnulib in libintl.
* gnulib-local/lib/localename-table.h.diff: New file.
* gnulib-local/lib/localename.c.diff: New file.
* gnulib-local/lib/tsearch.c.diff: New file.
* gnulib-local/modules/gettext-runtime-intl-misc: New file, based on
gettext-runtime/intl/Makefile.am.
* gnulib-local/modules/tsearch.diff: New file.
* gnulib-local/Makefile.am (EXTRA_DIST): Add them.
* autogen.sh (GNULIB_MODULES_LIBINTL, GNULIB_SETLOCALE_DEPENDENCIES): New
variables.
Invoke gnulib-tool for the gettext-runtime/intl/ directory.
Update 'aclocal' invocation for the gettext-runtime/intl/ directory.
* gettext-runtime/intl/configure.ac (enable_relocatable): Set to yes always.
Invoke gl_EARLY and gl_INIT. Don't invoke gl_USE_SYSTEM_EXTENSIONS,
AM_PROG_CC_C_O, gl_COMMON, gl_RELOCATABLE_LIBRARY explicitly.
Define IN_LIBINTL through config.h.
Rename __libc* macros and symbols through config.h.
Invoke AC_CONFIG_FILES for gnulib-lib/Makefile.
* gettext-runtime/m4/intl.m4 (AM_INTL_SUBDIR): Don't rename __libc* macros and
symbols here.
(gt_INTL_SUBDIR_CORE): Don't test for tsearch.
* gettext-runtime/intl/arg-nonnull.h: Remove file.
* gettext-runtime/intl/attribute.h: Remove file.
* gettext-runtime/intl/filename.h: Remove file.
* gettext-runtime/intl/flexmember.h: Remove file.
* gettext-runtime/intl/localcharset.h: Remove file.
* gettext-runtime/intl/localcharset.c: Remove file.
* gettext-runtime/intl/localename.c: Remove file.
* gettext-runtime/intl/localename-table.in.h: Remove file.
* gettext-runtime/intl/localename-table.c: Remove file.
* gettext-runtime/intl/lock.h: Remove file.
* gettext-runtime/intl/lock.c: Remove file.
* gettext-runtime/intl/printf-args.h: Remove file.
* gettext-runtime/intl/printf-args.c: Remove file.
* gettext-runtime/intl/printf-parse.h: Remove file.
* gettext-runtime/intl/printf-parse.c: Remove file.
* gettext-runtime/intl/relocatable.h: Remove file.
* gettext-runtime/intl/relocatable.c: Remove file.
* gettext-runtime/intl/setlocale-lock.c: Remov

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,9 @@
 /gettext-runtime/gnulib-lib/
 /gettext-runtime/gnulib-m4/
 /gettext-runtime/doc/relocatable.texi
+/gettext-runtime/intl/gnulib-lib/
+/gettext-runtime/intl/gnulib-m4/
+/gettext-runtime/intl/doc/relocatable.texi
 /gettext-runtime/libasprintf/gnulib-lib/
 /gettext-runtime/libasprintf/gnulib-m4/
 /gettext-runtime/man/x-to-1.in
