--- a/gnulib-local/Makefile.am
+++ b/gnulib-local/Makefile.am
@@ -136,6 +136,8 @@ lib/libxml/xpath.in.h \
 lib/libxml/xpathInternals.in.h \
 lib/libxml/xpointer.c \
 lib/libxml/xpointer.in.h \
+lib/localename.c.diff \
+lib/localename-table.h.diff \
 lib/markup.c \
 lib/markup.h \
 lib/mem-hash-map.c \
@@ -144,6 +146,7 @@ lib/obstack.h.diff \
 lib/progname.h.diff \
 lib/regex_internal.h.diff \
 lib/unistd.in.h.diff \
+lib/tsearch.c.diff \
 lib/xerror.c \
 lib/xerror.h \
 lib/xgetcwd.c \
@@ -154,6 +157,7 @@ m4/libxml.m4 \
 modules/backupfile \
 modules/closeout \
 modules/error-progname \
+modules/gettext-runtime-intl-misc \
 modules/gettext-runtime-misc \
 modules/gettext-tools-misc \
 modules/java \
@@ -161,6 +165,7 @@ modules/libtextstyle-dummy \
 modules/libxml \
 modules/markup \
 modules/mem-hash-map \
+modules/tsearch.diff \
 modules/xerror \
 modules/xgetcwd
 
