--- a/.gitignore
+++ b/.gitignore
@@ -544,14 +544,19 @@ autom4te.cache/
 # (i.e. erased by "make distclean"):
 /config.log
 /config.status
+/config.cache
 /gettext-runtime/config.log
 /gettext-runtime/config.status
+/gettext-runtime/config.cache
 /gettext-runtime/libasprintf/config.log
 /gettext-runtime/libasprintf/config.status
+/gettext-runtime/libasprintf/config.cache
 /gettext-tools/config.log
 /gettext-tools/config.status
+/gettext-tools/config.cache
 /gettext-tools/examples/config.log
 /gettext-tools/examples/config.status
+/gettext-tools/examples/config.cache
 # Files created by "config.status":
 /Makefile
 /gettext-runtime/Makefile
