--- a/gettext-tools/misc/autopoint.in
+++ b/gettext-tools/misc/autopoint.in
@@ -1,6 +1,6 @@
 #! /bin/sh
 #
-# Copyright (C) 2002-2020 Free Software Foundation, Inc.
+# Copyright (C) 2002-2021 Free Software Foundation, Inc.
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -201,13 +201,18 @@ Report bugs in the bug tracker at <https://savannah.gnu.org/projects/gettext>
 or by email to <bug-gettext@gnu.org>."
 }
 
-# func_version
+# func_version include_config_details
 # outputs to stdout the --version message.
+# Inputs:
+# - include_config_details   true or false
 func_version ()
 {
   echo "$progname (GNU $package) $version"
-  echo "Uses a versions archive in @ARCHIVE_FORMAT@ format."
-  echo "Copyright (C) 2002-2020 Free Software Foundation, Inc.
+  if $1; then
+    echo "This binary is configured to use a versions archive in @ARCHIVE_FORMAT@ format."
+    echo
+  fi
+  echo "Copyright (C) 2002-2021 Free Software Foundation, Inc.
 License GPLv3+: GNU GPL version 3 or later <https://gnu.org/licenses/gpl.html>
 This is free software: you are free to change and redistribute it.
 There is NO WARRANTY, to the extent permitted by law."
@@ -261,8 +266,12 @@ unset CLICOLOR_FORCE GREP_OPTIONS
 #      -V*) # Some people omit the space between -V and the version number.
 #        ver=`echo "X$1" | sed -e 's/^X-V//'`
 #        shift ;;
+      --version-without-config )
+        # Print version output without build dependent details.
+        func_version false
+        exit 0 ;;
       --version | --versio | --versi | --vers | --ver | --ve | --v )
-        func_version
+        func_version true
         exit 0 ;;
       -- ) # Stop option prcessing
         shift; break ;;
